--- a/src/general/mainpage/carousel/CarouselComponent.module.css
+++ b/src/general/mainpage/carousel/CarouselComponent.module.css
@@ -1,9 +1,10 @@
 .contentStyleCarousel {
-    height: 160px;
+    height: 200px;
     color: black;
-    line-height: 160px;
+    line-height: 200px;
     text-align: center;
     margin-bottom: 10px;
     max-width: 1500px;
-    margin: 0 auto;
+    margin: auto;
+    margin-bottom: 2px;
 }
