--- a/src/general/mainpage/header/cap/Cap.module.css
+++ b/src/general/mainpage/header/cap/Cap.module.css
@@ -1,16 +1,13 @@
-.cap {
-    background-color: black;
-    width: 1536px;
-    height: 62px;
-    margin-bottom: 1px;
-}
-
 .brandName {
-    color:red;
+    color: red;
     font-size: 36px;
     font-weight: bolder;
-    padding: 10px;
-    margin-bottom: 1px;
+}
+
+@media (max-width: 767px) {
+    .brandName {
+        font-size: 24px;
+    }
 }
 
 .store {
@@ -21,9 +18,15 @@
     color: white;
     font-size: 24px;
     float: right;
-    padding-top: 8px;
-    padding-right: 20px;
+    padding-left: 25%;
     cursor: pointer;
+    position: absolute;
+}
+
+@media (max-width: 767px) {
+    .icon {
+        padding-left: 10px;
+    }
 }
 
 .phonenumber {
@@ -34,6 +37,11 @@
     position: absolute;
     color: white;
     font-size: 18px;
-    padding-left: 1000px;
-    padding-top: 8px;
+    padding-left: 58%;
+}
+
+@media (max-width: 767px) {
+    .phoneicon {
+        padding-left: 10px;
+    }
 }
