--- a/src/general/mainpage/header/cap/Cap.module.css
+++ b/src/general/mainpage/header/cap/Cap.module.css
@@ -16,11 +16,9 @@
 
 .icon {
     color: white;
-    font-size: 24px;
-    float: right;
-    padding-left: 25%;
+    font-size: 26px;
+    margin-left: 150px;
     cursor: pointer;
-    position: absolute;
 }
 
 @media (max-width: 767px) {
@@ -44,4 +42,24 @@
     .phoneicon {
         padding-left: 10px;
     }
+}
+
+.verify {
+    margin-left: 60px;
+    z-index: 999;
+}
+
+.userName {
+    position: absolute;
+    margin-left: -36px;
+    margin-top: 20px;
+    font-size: 10px;
+    font-weight: 500;
+    color: green;
+}
+
+.userIcon {
+    font-size: 22px;
+    color: white;
+    margin-left: -2px;
 }
