--- a/src/general/mainpage/skeleton/MainSceleton.module.css
+++ b/src/general/mainpage/skeleton/MainSceleton.module.css
@@ -1,14 +1,15 @@
-  .main {
+.main {
     max-width: 1500px;
     margin: 0 auto;
-  }
-  
-  .item {
+}
+
+.item {
     font-size: 16px;
     color: rgb(151, 149, 149);
-  }
-  
-  .menu {
+    font-family: fantasy;
+}
+
+.menu {
     height: 860px;
     border-left: 3px solid red;
     border-top: 3px solid red;
@@ -17,23 +18,22 @@
     top: 112px;
     z-index: 999;
     width: 200px;
-  }
-  
-  .content {
+}
+
+.content {
     margin-left: -1.6em;
     width: 103.7%;
     min-height: 280px;
-  }
-  
-  @media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 768px) {
     .menu {
-      width: 34%;
+        width: 34%;
     }
-  
+
     .content {
-      margin-left: 0;
-      margin-top: 0;
-      width: 100%;
+        margin-left: 0;
+        margin-top: 0;
+        width: 100%;
     }
-  }
-  
+}
